# Homelands-Bot

./: .breakpoints  .replit  README  bot_func.py  control.py  day.py  googleapi.py  main.py  main.sh  pyproject.toml  scheduler.py  startup.py  subjects.py  test.py
.github/workflows/: codeql-analysis.yml  codeql.yml
assets/temp/: temp.py
duedate/: client_secret_287614113489-7aa8qhs661eesjlicnr0lv3r0aplkoe6.apps.googleusercontent.com.json  client_secret_287614113489-rdfsa32332u970qusgto52vdoa4lh5lm.apps.googleusercontent.com.json  cred.json  danieltoken.json  token.json
