[tool.poetry]
name = "repl_python3_Bot-Again"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
google-api-python-client = "^2.24.0"
google-auth-oauthlib = "^0.4.6"
pytz = "^2021.3"
pyowm = "^3.2.0"
python-dotenv = "^0.19.2"
replit = "^3.2.4"
Events = "^0.4"
day = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
